assets/css/style.css
/* ... */
.ftr-newsletter form button:hover{background:transparent;}
.follow-luvr > a{margin:0 10px;display:inline-block;vertical-align:middle;}
.follow-luvr > a svg{width:22px;height:22px;margin:0; fill:#fff;}
.follow-luvr > a:hover svg{fill:#f26f6f;}

.footer-bottom{background:#1e1c1c;padding:16px 0 14px;font-family:'Roboto';font-size:12px;font-weight:400;text-decoration:none;color:#797878;}
.footer-bottom p{margin:0;padding:0;line-height:18px;letter-spacing:0.04em;}
.footer-bottom p a{color:#fff;text-transform:uppercase;margin:0 0 0 3px;text-decoration:none;}
.footer-bottom a:hover{color:#f26f6f;}
.policy-link{float:right;}
.policy-link a{font-family:'poppins';font-size:12px;font-weight:500;text-decoration:none;text-transform:uppercase;line-height:20px;color:#797878;margin:0 0 0 20px;line-height:18px;letter-spacing:0.02em;}
.policy-link a:hover{color:#fff;}


/***** inner page css *****/
.with-login #header:after{content:'';background:url(../images/pattent.png) repeat 0 0;width:100%;height:100%;display:block;position:absolute;top:0;left:0;opacity:.4;z-index:-1;}
.with-login #header{background:#f26f6f;width:100%;height:auto;margin:0;position:relative;padding:30px 0 10px;border-bottom:6px solid #221e1e;z-index:10;transition:ease-in-out .5s;}
.with-login #header.bg-02{background:#9570d7;}
.with-login #header.bg-03{background:#71afd6;}

.with-login .header{margin:0 0 10px;padding:0 20px;}
.breadcrumb-div{display:block;text-align:center;}
.breadcrumb-div ul{list-style:none;margin:0;padding:0;}
.breadcrumb-div ul li{display:inline-block;vertical-align:middle;width:auto;margin:0;font-family:'Poppins';font-size:12px;font-weight:500;color:#fff;text-decoration:none;padding:0 15px;text-transform:uppercase;position:relative;letter-spacing:0.08em;}
.breadcrumb-div ul li a{font-family:'Poppins';font-size:12px;font-weight:500;color:#fff;text-decoration:none;text-transform:uppercase;}
.breadcrumb-div ul li a:after{content:'>';font-family:'Poppins';font-size:12px;color:#fff;position:absolute;top:50%;right:-5px;transform:translateY(-50%);}
.breadcrumb-div ul li a:hover{color:#221e1e;}
.user-dropdown{float:right;}
.user-dropdown > a{position:relative;padding:11px 0 0 72px;min-height:60px;display:block;text-decoration:none !important;margin:8px -2px 0 0;}
.user-dropdown > a big{font-family:'poppins';font-size:15px;color:#231f20;text-decoration:none;line-height:20px;text-transform:uppercase;letter-spacing:0.04em;font-weight:700;margin:0 0 3px;display:block;min-width:90px;}
.user-dropdown > a small{font-family:'poppins';font-size:12px;color:#666;text-decoration:none;line-height:20px;text-transform:uppercase;letter-spacing:0.04em;display:block;}
.user-pic{border:2px solid #fff;box-shadow:1px 2px 3px 0 rgba(0,0,0,.2);width:60px;height:60px;display:block;position:absolute;top:0;left:0;border-radius:100px;display:block;}
.user-pic img{min-width:56px;min-height:56px;max-width:56px;border-radius:100px;}
.down-caret{position:absolute;bottom:4px;right:0;}
.down-caret svg{width:12px;}
.user-dropdown > a:hover big,
.user-dropdown > a:hover small{color:#f26f6f;}
.user-dropdown > a:hover svg{fill:#f26f6f;}
.dropdown-menu{border:0;border-top:4px solid #f26f6f;border-radius:0;padding:0;}
.dropdown-menu > li > a{padding:6px 20px;}
.inner-content{padding:0 0 60px;min-height:700px;overflow-x:hidden;}
/***** List page content *****/
.user-list{padding:90px 0 0;display:block;position:relative;}
.bg-name{font-family:'Poppins';font-size:280px;font-weight:700;color:rgba(39,35,36,.03);line-height:100%;text-transform:uppercase;position:absolute;top:-32px;right:-31px;z-index:-1;letter-spacing:0.1em;}
.user-list:after{content:'';clear:both;display:blck;}
.user-list-l{width:100%;float:left;max-width:582px;position:relative;}
.user-list-pic:after{content:'';position:absolute;top:70px;left:-119%;height:82px;background:#221e1e;width:125%;z-index:-1;}
.user-list-pic:before{content:'';position:absolute;top:70px;right:-84px;height:82px;background:#221e1e;width:50%;z-index:-1;}
.user-list-pic{width:496px;position:relative;}
.user-list-pic > a{border:6px solid rgba(255,255,255,.6);display:block; box-shadow:0 0 26px 0 rgba(0,0,0,.2);}
.user-list-pic > a > img{width:100%;}
.user-list-pic-close{position:absolute;top:-17px;right:-17px;}
.user-list-pic-close > a{display:block;width:34px;height:34px;background:#fff;border-radius:0;text-align:center;line-height:36px;box-shadow:0 0 14px 0 rgba(0,0,0,.1);padding:11px 0 0 1px;border-radius:100%;}
.user-list-pic-close > a:hover{background:#f26f6f;}
.user-list-pic-close > a svg{width:12px;height:12px;fill-opacity:.5;}
.user-list-pic-close > a:hover svg{fill:#fff;fill-opacity:1;}
.user-next-prev{position:absolute;bottom:6px;left:6px;width:100%;height:38px;}
.user-next-prev a{width:50px;height:38px;background:transparent;text-align:center;padding:11px 5px;top:0;position:absolute;display:block;}
.user-next-prev a:first-child{left:0;}
.user-next-prev a:last-child{right:12px;}
.user-next-prev a:hover{background:#f26f6f;}
.user-next-prev a svg{width:26px;height:16px;}
.user-next-prev a:hover svg{fill:#fff;}
.user-likes{position:absolute;top:152px;right:-84px;border-bottom:1px solid #ececec;z-index:1;}
.user-likes a{width:82px;height:82px;text-align:center;display:block;padding:25px 10px;line-height:50px;transition:easy-in-out .5s;border-right:1px solid #ececec;}
.user-likes a:first-child{border-bottom:1px solid #ececec;fill:#2fad66;fill:#fc735d;}
.user-likes a:first-child:hover{background:#fc735d;fill:#fff;transition:easy-in-out .5s;border-right:1px solid #fc735d;}
.user-likes a:last-child{fill:#2fad66;}
.user-likes a:last-child:hover{background:#2fad66;fill:#fff;transition:easy-in-out .5s;border-right:1px solid #2fad66;}
.user-likes a svg{width:27px;}
.user-likes a:first-child svg{top:7px;position:relative;}


.user-list-r{width:100%;max-width:480px;float:right;padding:86px 0 0;}
.user-list-r h2{margin:0 0 35px;padding:0;font-size:100%;line-height:100%;display:block;}
/* ... */

